# src/Ai.Tlbx.MidTerm/openapi/openapi.json
@@ -1379,6 +1379,35 @@
         }
       }
     },
+    "/api/browser/main": {
+      "post": {
+        "tags": [
+          "Ai.Tlbx.MidTerm.OpenApi"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/BrowserCommandRequest"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/BrowserCommandResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/api/webpreview/previews": {
       "get": {
         "tags": [
@@ -5199,6 +5228,7 @@
           "terminalEnterMode",
           "scrollbackProtection",
           "mobileKineticTerminalScroll",
+          "mobileDenseTerminalMode",
           "disableAutoMainBrowserPromotion",
           "keepSystemAwakeWithActiveSessions",
           "resumeMode",
@@ -5428,6 +5458,9 @@
             "type": "boolean"
           },
           "mobileKineticTerminalScroll": {
+            "type": "boolean"
+          },
+          "mobileDenseTerminalMode": {
             "type": "boolean"
           },
           "disableAutoMainBrowserPromotion": {
